tests_ex32/messed_up_paths_test/errors.txt
messing/up/students/Compilation_Error_gets_10/error1.c:6:1: error: expected '}'
^
messing/up/students/Compilation_Error_gets_10/error1.c:4:1: note: to match this '{'
{
^
1 error generated.
